<resources>
    <string name="app_name">WakeApp</string>
    <string name="alarm_deaktiviert">Alarm deaktiviert</string>
    <string name="deaktivieren">DEAKTIVIEREN</string>
    <string name="aktivieren">Aktivieren</string>
    <string name="create">Erstellen</string>
    <string name="alle_custom_frage_l_schen">alle Erstellten Fragen löschen</string>
    <string name="richtige_antwort">Richtige Antwort:</string>
    <string name="falsche_antwort_1">Falsche Antwort 1:</string>
    <string name="falsche_antwort_2">Falsche Antwort 2:</string>
    <string name="falsche_antwort_3">Falsche Antwort 3:</string>
    <string name="hinweis">Hinweis:</string>
    <string name="frage">Frage:</string>
    <string name="create_custom_question">Erstelle deine eigene Frage:</string>
    <string name="textview">TextView</string>
    <string name="laden">Laden</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="nutzerkonto_l_schen">Nutzerkonto löschen</string>
    <string name="eigene_frage_ersellen">Eigene Frage erstellen</string>
    <string name="pakete_verwalten">PAKETE VERWALTEN</string>
    <string name="w_hle_eine_opion">Wähle eine Opion:</string>
    <string name="user">Benutzereinstellungen:</string>
    <string name="antwort_a">Antwort: A</string>
    <string name="antwort_b">Antwort: B</string>
    <string name="antwort_c">Antwort: C</string>
    <string name="antwort_d">Antwort: D</string>
    <string name="loading">LOADING...</string>
    <string name="weiter">Weiter</string>
    <string name="name">Name:</string>
    <string name="guten_morgen">Guten Morgen</string>
    <string name="guten_nacht">Gute Nacht</string>
    <string name="neuer_wecker">zurück zum Wecker</string>
    <string name="alarm_wurde_auf">Alarm gestellt auf: </string>
    <string name="klickehier">"Klicke hier um den Wecke zu deaktivieren</string>
    <string name="richtig">Richtig</string>
    <string name="share">Hey! kennst du schon die neuste App? Damit MUSST du aufstehen, und wirst besser in der UNI :) Probiers doch mal aus! *hier der Link*</string>
    <string name="empty"></string>
    <string name="share_button">TEILEN</string>
    <string name="anleitung_button">\?</string>
    <string name="anleitung_ueberschrift">BEDIENUNGSANLEITUNG</string>
    <string name="anleitung_text">Willkommen bei <b>WakeApp</b>.\n\n Beim erstmaligen öffnen der App werden Sie gebeten ihren Namen anzugeben.\nDanach muss mindestens ein Datenpaket heruntergeladen werden.\nDiese <b>Pakete beinhalten die Quizfragen</b> für die jeweiligen Studiengänge.\nDanach gelangen Sie auf den Home-Bildschirm. Dieser ist Dreh- und Angelpunkt der App.\nAuf dem Home-Bildschirm können Sie nun den Wecker stellen und aktivieren <b>(Es kann immernur ein Wecker gestellt werden)</b>.\nDeaktivieren können Sie den Wecker mit dem Deaktivieren-Button.\nBei jeder <b>deaktivierung muss eine Frage gelöst werden</b>.\nJede <b>richtig beantwortete Frage erhöht ihren Punktestand</b>. Jede nicht beantwortete Frage lässt den Punktestand wieder sinken.\nNachdem die Frage beantwortet wurde, sehen Sie <b>Ihre Avatar-Eule.\nDiese wächst nach 10 erzielten Punkten</b>.\nAuf dem Home-Bildschirm befindet sich ein <b>Einstellungs-Button(Zahnrad)</b>.\nIn den Einstellungen wird ihr Punktestand angezeigt. Zusätzlich können Sie darin <b>eigene Fragenerstellen</b>, neue <b>Fragen-Pakete herunterladen</b> oder sich selbst als <b>User löschen und einen neuen Erstellen</b> (Jedoch bleiben ihnen die zuvor heruntergeladenenFragen-Pakete erhalten).\nDiese Bedienungsanleitung finden Sie ebenfalls in den Einstellungen wieder.\n\n<b>Wir wünschen viel Spaß und viele Lernerfolge mit WakeApp.</b></string>
    <string name="gute_nacht">Gute Nacht</string>
</resources>
