<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragen_background">

    <Button
        android:id="@+id/home"
        android:layout_width="124dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorControlHighlight"
        android:text="@string/home"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/anleitung"
        android:layout_width="124dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorControlHighlight"
        android:text="@string/anleitung_button"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/user"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home" />

        <TextView
            android:id="@+id/UserView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/textview"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/PunkteView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/textview"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserView" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/schowReset"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:onClick="frage"
        android:text="@string/w_hle_eine_opion"
        android:textColor="?android:attr/colorButtonNormal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schowReset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/custom_frage"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginTop="8dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/eigene_frage_ersellen"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_reset" />

            <Button
                android:id="@+id/pakete_reset"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginTop="8dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/pakete_verwalten"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/custom_frage" />

            <Button
                android:id="@+id/name_reset"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginTop="8dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/nutzerkonto_l_schen"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/schowReset"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginTop="8dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/share_button"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pakete_reset"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>